# ATM-simulator

./: .gitignore  CREDITS.md  DESIGN.md  LICENSE  README.md  README_en.md  boot_log.txt  check_camera.py  error_log.txt  main.py  memo.txt  pyproject.toml  requirements.txt  run.py
ai/: model_loader.py
assets/sounds/: README.txt
config/: atm_config.yml
core/: account_manager.py  controller.py  face_checker.py  gesture_validator.py  hand_tracker.py  state_machine.py  states.py
data/: accounts.json
model/: keras_model.h5  labels.txt
resources/config/: atm_config.yml  languages.json
resources/i18n/EN/text/: EN.json
resources/i18n/ES/text/: ES.json
resources/i18n/FR/text/: FR.json
resources/i18n/IT/text/: IT.json
resources/model/: keras_model.h5
scripts/: clean_and_build.py  generate_icon.py  sync_i18n.py
src/: __init__.py  main.py  paths.py
src/ai/: model_loader.py
src/core/: account_manager.py  audio_manager.py  audio_policy.py  config_loader.py  controller.py  face_checker.py  gesture_validator.py  i18n_manager.py  input_handler.py  interfaces.py  pin_validator.py  session_supervisor.py  state_machine.py  states.py  transaction_context.py  vision_pipeline.py
src/core/states/: __init__.py  absence.py  auth.py  base.py  common.py  create_account.py  language.py  menu.py  result.py  system.py  transfer.py  withdraw.py
src/ui/: screens.py  styles.py
src/utils/: i18n_validator.py
src/vision/: async_yolo_detector.py  camera_manager.py  position_tracker.py  yolo_pose_detector.py
tests/: debug_i18n.py  test_audio_policy.py  test_logic.py  test_pin_validator.py  test_refactoring.py
tools/: debug_opencv.py
ui/: screens.py
vision/: camera_manager.py
(+5 files in other folders)
