[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "AI-based Touchless Machine (ATM)"
version = "2.0.0"
description = "AI Non-Contact ATM Simulator using Gesture Recognition"
authors = [
    {name = "Renju (HR0620)"},
]
requires-python = ">=3.13"
dependencies = [
  "opencv-python",
  "numpy",
  "ultralytics",
  "Pillow",
  "PyYAML",
  "pygame"
]


[project.scripts]
atm-simulator-dev = "src.main:main"
